
  * New upstream release.  (Closes: #415699)
    - Support newer Linux kernels.  (Closes: #409797, #410120)
    - Add aklog fallbacks for null realms to support the referral
      capability in MIT Kerberos 1.6 and later.  (Closes: #410314)
  * Apply patch from Thomas Sesselmann to support setting options to pass
    to bosserver in /etc/default/openafs-fileserver.  (Closes: #409357)

 --

openafs (1.4.2-6) unstable; urgency=medium

  * SECURITY: Apply upstream patch to disable setuid status on all cells
    by default.  Prior versions of AFS defaulted to honoring setuid bits
    in the local cell, but since unauthenticated file access in AFS is
    unencrypted, an attacker could forge packets from an AFS file server
    to synthesize a setuid binary in AFS.
  * Apply upstream fix to use a single high-numbered group for the PAG on
    2.6 kernels and sort the group properly.  Fixes AFS-caused group
    ordering problems that could lead the kernel to ignore some group
    membership for users.  (Closes: #414911)
  * Apply upstream fix for segfaults in pts rename.  (Closes: #409184)
  * Apply upstream fix to show reasonable free space numbers for AFS in
    df.  Without this fix, some programs which use df to check free space
    may think that directories in AFS are full and prevent the user from
    attempting to write files.  (Closes: #415294)
  * Translation updates:
    - Dutch, thanks cobaco.  (Closes: #413701)
    - Portuguese, thanks Miguel Figueiredo.  (Closes: #414800)

 -- Russ Allbery <rra@debian.org>  Wed, 14 Mar 2007 18:37:12 -0700

openafs (1.4.2-5) unstable; urgency=low

  * Translation updates:
    - Chinese, thanks Chun Tian (binghe).  (Closes: #406063)

 -- Russ Allbery <rra@debian.org>  Sun, 28 Jan 2007 13:43:16 -0800

openafs (1.4.2-4) unstable; urgency=low

  * Update documentation to note that enabling v4 support or running
    krb524d is no longer required for aklog to work.
  * Translation updates: